<resources>
    <string name="app_name">Kenis Toys</string>
    <string name="action_settings">Settings</string>
    <string name="kenis">Kenis</string>
    <string name="toys">Toys</string>
    <string name="title_activity_kenis">Kenis Toys</string>
    <string name="title_activity_toys">Kenis Toys</string>
    <string name="title_activity_note">Kenis Toys</string>
    <string name="action_save">save</string>
    <string name="fiches">Fiszki</string>
    <string name="title_activity_fiches">FichesActivity</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_countdown">CountdownActivity</string>
    <string name="countdown">Odliczanie</string>
    <string name="start">Start</string>
    <string name="notifyTitle">tytuł powiadomienia</string>
    <string name="notifyBody">zawartość powiadomienia</string>
    <string name="countdownValue">czas w sekundach</string>
    <string name="primeNumber">Liczba pierwsza</string>
    <string name="title_activity_prime_number">PrimeNumberActivity</string>
    <string name="five">5</string>
    <string name="whichNumber">którą liczbę pierwszą wyświetlić</string>
    <string name="level">Poziomica</string>
    <string name="title_activity_level">LevelActivity</string>
    <string name="title_activity_draw">DrawActivity</string>
    <string name="paint">Malowanie</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="takePhoto">Zrób zdjęcie</string>
    <string name="openGallery">Otwórz galerię</string>
    <string name="camera">Aparat</string>
</resources>
